--- a/style.css
+++ b/style.css
@@ -1,4 +1,30 @@
+h1{
+  background: blue;
+  font-size: 50px;
+  text-align: center;
+  padding: 20px;
+  font-family: helvetica;
+  color: white;
+}
+
+p {
+  text-align: center;
+  margin-top: 20px;
+  font-family: helvetica;
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+
+#display{
+  text-align: center;
+}
+
 .survey {
   width: 300px;
   margin-left: 40px;
+  border: 5px solid black;
+}
+
+ul {
+  margin-left: 50px;
 }
