--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@ p {
   text-align: center;
 }
 
+#chart {
+  width: 1000px;
+  margin: 0 auto;
+}
+
 .survey {
   width: 300px;
   margin-left: 40px;
